<resources>
    <string name="app_name">Daily Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Expense Tracker</string>
    <string name="nav_header_subtitle">rushisoftware.com.au</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_group">Groups</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="agf_text">Add Group</string>
    <string name="agf_input_hint">Enter Group Name</string>
    <string name="agf_button_cancel">Cancel</string>
    <string name="agf_button_add">Add</string>
    <string name="group_name">Groups</string>

    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="nav_item_search">Filter</string>

    <string name="cash">Cash</string>
    <string name="bank">Bank</string>

    <string name="enter_date">Date</string>
    <string name="enter_party">Party Name</string>
    <string name="enter_title">Enter Title/Description</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_category">Select Category</string>
    <string name="save">SAVE</string>
    <string name="enter_bank_name">Select Bank</string>

    <string name="title_activity_summary">Summary</string>
    <string name="tab_today">Today</string>
    <string name="tab_day">Day</string>
    <string name="tab_month">Month</string>
    <string name="tab_year">Year</string>
    <string name="tab_custom">Custom</string>
    <string name="title_activity_party">PartyActivity</string>

    <string name="apf_text">Add Party</string>
    <string name="apf_input_hint">Enter Party Name</string>
    <string name="apf_button_cancel">Cancel</string>
    <string name="apf_button_add">Add</string>

</resources>