<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".transaction.TransactionActivity">

    <LinearLayout
        android:id="@+id/group_search_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/appcolor_sub"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:focusable="false"/>

        <ImageView
            android:id="@+id/img_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="8.5"
            android:padding="7.0dip"
            app:srcCompat="@drawable/ic_filter_and_sort_arrows" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_base_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/group_activity_base_size"
        android:orientation="horizontal"
        android:weightSum="3.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_income"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1.0"
            android:background="@color/appcolor_main"
            android:stateListAnimator="@null"
            android:text="@string/add_income"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="@dimen/group_activity_base_text_size" />

        <Button
            android:id="@+id/btn_expense"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0.5dip"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1.0"
            android:background="@color/appcolor_main"
            android:stateListAnimator="@null"
            android:text="@string/add_expense"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="@dimen/group_activity_base_text_size" />

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0.5dip"
            android:layout_weight="1.0"
            android:background="@color/appcolor_main"
            android:stateListAnimator="@null"
            android:text="@string/nav_item_search"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="@dimen/group_activity_base_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>